# pp_tasks

./: CMakeLists.txt  README.md  cond_main.cc  connect_time.cc  draw.py  error.txt  expr_heterogeneity.txt  expr_time.txt  out.txt  pi_main.cc  run.sh
differentiator_lib/include/: diff.h  dsl.h  expr.h  get.h  latex.h  print.h  read_preorder.h  simplify.h  tree.h  tree_debug.h
differentiator_lib/logs/: log.html
differentiator_lib/source/: diff.cpp  expr.cpp  get.cpp  latex.cpp  print.cpp  read_preorder.cpp  simplify.cpp  tree.cpp  tree_debug.cpp
differentiator_lib/tmp/: graphviz.dot  main.tex
include/: conductivity.hh  pi_counter.hh
